--- a/parabens04.html
+++ b/parabens04.html
@@ -93,7 +93,7 @@
         position: fixed;
         width: 30px;
         height: 30px;
-        background-image: url('https://github.com/kellycardoso21/parabens-mae/blob/main/papel.jpg'); /* imagem de coração online */
+        background-image: url('https://raw.githubusercontent.com/kellycardoso21/parabens-mae/blob/main/papel.jpg'); /* imagem de coração online */
         background-size: cover;
         opacity: 0.8;
         animation-name: subir;
@@ -120,7 +120,7 @@
 Mamãe, neste dia especial quero que você saiba o quanto é amada e admirada. Cada abraço seu aquece meu coração, cada sorriso seu ilumina meus dias, e cada palavra sua me dá força para seguir sempre em frente. Você é minha inspiração, meu porto seguro e a pessoa que transforma os momentos simples em lembranças inesquecíveis. Que seu aniversário seja repleto de alegria, amor e sorrisos sinceros, e que cada dia da sua vida seja tão maravilhoso quanto você é para mim. Obrigada por ser minha mãe, minha amiga e meu exemplo de coragem e bondade. Te amo infinitamente, hoje e sempre!
 </div>
 <div class="fotos">
-    <img src="https://github.com/kellycardoso21/parabens-mae/blob/main/rosa.jpeg" alt="Foto 1">
+    <img src="https://raw.githubusercontent.com/kellycardoso21/parabens-mae/blob/main/rosa.jpeg" alt="Foto 1">
 </div>
 
 <!-- Segundo bloco -->
@@ -128,7 +128,7 @@ Mamãe, neste dia especial quero que você saiba o quanto é amada e admirada. C
 Que seu dia seja repleto de alegria, sorrisos sinceros e momentos inesquecíveis. Você merece toda a felicidade do mundo, hoje e sempre.
 </div>
 <div class="fotos">
-    <img src="https://github.com/kellycardoso21/parabens-mae/blob/main/montagem.jpeg" alt="Foto 2">
+    <img src=" https://raw.githubusercontent.com/kellycardoso21/parabens-mae/main/montagem.jpeg" alt="Foto 2">
 </div>
 
 <!-- Botão "Amei" -->
@@ -159,3 +159,4 @@ Que seu dia seja repleto de alegria, sorrisos sinceros e momentos inesquecíveis
 
 </body>
 </html>
+
