--- a/parabens04.html
+++ b/parabens04.html
@@ -15,13 +15,13 @@
         overflow-x: hidden;
         overflow-y: auto;
         background-color: #ffe5e5;
-        background-image: url('papel.jpg'); /* imagem de corações online */
+        background-image: url('https://raw.githubusercontent.com/kellycardoso21/parabens-mae/main/papel.jpg'); /* link direto do papel */
         background-repeat: repeat;
     }
 
     /* Bloco branco estilo "papel" */
     .papel {
-        background-color: white; /* cor do papel */
+        background-color: white; 
         max-width: 700px;
         margin: 50px auto;
         padding: 30px 40px;
@@ -70,7 +70,6 @@
         color: #151515;
     }
 
-    /* Botão "Amei" */
     .botao-amei {
         background-color: #ff3366;
         color: white;
@@ -88,12 +87,11 @@
         background-color: #ff6699;
     }
 
-    /* Corações flutuantes */
     .coracao {
         position: fixed;
         width: 30px;
         height: 30px;
-        background-image: url('https://raw.githubusercontent.com/kellycardoso21/parabens-mae/blob/main/papel.jpg'); /* imagem de coração online */
+        background-image: url('https://raw.githubusercontent.com/kellycardoso21/parabens-mae/main/papel.jpg'); /* link direto */
         background-size: cover;
         opacity: 0.8;
         animation-name: subir;
@@ -111,35 +109,31 @@
 </head>
 <body>
 
-<div class="papel"> <!-- BLOCO PAPEL COMEÇA AQUI -->
+<div class="papel">
 
 <h1>Feliz Aniversário, Mamãe! 💖</h1>
 
-<!-- Primeiro bloco -->
 <div class="frase">
-Mamãe, neste dia especial quero que você saiba o quanto é amada e admirada. Cada abraço seu aquece meu coração, cada sorriso seu ilumina meus dias, e cada palavra sua me dá força para seguir sempre em frente. Você é minha inspiração, meu porto seguro e a pessoa que transforma os momentos simples em lembranças inesquecíveis. Que seu aniversário seja repleto de alegria, amor e sorrisos sinceros, e que cada dia da sua vida seja tão maravilhoso quanto você é para mim. Obrigada por ser minha mãe, minha amiga e meu exemplo de coragem e bondade. Te amo infinitamente, hoje e sempre!
+Mamãe, neste dia especial quero que você saiba o quanto é amada e admirada...
 </div>
 <div class="fotos">
-    <img src="https://raw.githubusercontent.com/kellycardoso21/parabens-mae/blob/main/rosa.jpeg" alt="Foto 1">
+    <img src="https://raw.githubusercontent.com/kellycardoso21/parabens-mae/main/rosa.jpeg" alt="Foto 1">
 </div>
 
-<!-- Segundo bloco -->
 <div class="frase">
-Que seu dia seja repleto de alegria, sorrisos sinceros e momentos inesquecíveis. Você merece toda a felicidade do mundo, hoje e sempre.
+Que seu dia seja repleto de alegria, sorrisos sinceros e momentos inesquecíveis...
 </div>
 <div class="fotos">
-    <img src=" https://raw.githubusercontent.com/kellycardoso21/parabens-mae/main/montagem.jpeg" alt="Foto 2">
+    <img src="https://raw.githubusercontent.com/kellycardoso21/parabens-mae/main/montagem.jpeg" alt="Foto 2">
 </div>
 
-<!-- Botão "Amei" -->
 <button class="botao-amei" onclick="clicouAmei()">Amei ❤️</button>
 
 <footer>Com todo meu amor, Kelly ❤️</footer>
 
-</div> <!-- BLOCO PAPEL TERMINA AQUI -->
+</div>
 
 <script>
-    // Criar múltiplos corações flutuando
     for (let i = 0; i < 20; i++) {
         let heart = document.createElement('div');
         heart.className = 'coracao';
@@ -151,7 +145,6 @@ Que seu dia seja repleto de alegria, sorrisos sinceros e momentos inesquecíveis
         document.body.appendChild(heart);
     }
 
-    // Função do botão "Amei"
     function clicouAmei() {
         alert("Que bom que você gostou! 💖");
     }
@@ -159,4 +152,3 @@ Que seu dia seja repleto de alegria, sorrisos sinceros e momentos inesquecíveis
 
 </body>
 </html>
-
